<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>Invhub-cdd-aqa</groupId>
    <artifactId>invhub_cdd</artifactId>
    <version>1.0-SNAPSHOT</version>

    <repositories>
        <repository>
            <id>github_smile</id>
            <name>GitHub Smile Packages</name>
            <url>https://github.com/SymphonySensa/smile</url>
        </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>github_invhub-qa</id>
            <name>GitHub invhub-cdd Packages</name>
            <url>https://github.com/SymphonySensa/invhub-qa-automation-framework</url>
        </repository>
    </distributionManagement>

    <properties>
        <!--BASE PROPERTIES-->
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <allure-report.enable>true</allure-report.enable>
        <allure.hidden.test.disabled>true</allure.hidden.test.disabled>
        <allure.link.issue.pattern>https://netreveal.atlassian.net/browse/{}</allure.link.issue.pattern>
        <allure.link.tms.pattern>https://netreveal.atlassian.net/browse/{}</allure.link.tms.pattern>

        <!--DEPENDENCIES-->
        <aspectjweaver.version>1.9.19</aspectjweaver.version>
        <rest-assured.version>5.3.2</rest-assured.version>
        <google.truth.version>1.1.5</google.truth.version>
        <jayway.jsonpath>2.8.0</jayway.jsonpath>
        <google.guava.version>31.1-jre</google.guava.version>
        <assertj.version>3.24.2</assertj.version>
        <jackson.version>2.16.0</jackson.version>

        <!--MAVEN PLUGINS-->
        <allure-maven.version>2.12.0</allure-maven.version>
        <maven-checkstyle-plugin.version>3.3.0</maven-checkstyle-plugin.version>
        <checkstyle.com.puppycrawl.tools.version>10.12.2</checkstyle.com.puppycrawl.tools.version>
        <org.apache.poi.version>4.1.1</org.apache.poi.version>
        <com.github.javafaker>1.0.2</com.github.javafaker>
        <maven-surefire-plugin.version>3.0.0</maven-surefire-plugin.version>
        <maven-shade-plugin.version>3.5.1</maven-shade-plugin.version>
        <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
        <build-helper-maven-plugin.version> 3.5.0</build-helper-maven-plugin.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.symphonysensa</groupId>
            <artifactId>smile</artifactId>
            <version>1.2</version>
        </dependency>
        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>rest-assured</artifactId>
            <version>${rest-assured.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.truth</groupId>
            <artifactId>truth</artifactId>
            <version>${google.truth.version}</version>
        </dependency>
        <dependency>
            <groupId>com.jayway.jsonpath</groupId>
            <artifactId>json-path</artifactId>
            <version>${jayway.jsonpath}</version>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${google.guava.version}</version>
        </dependency>
        <dependency>
            <groupId>com.github.javafaker</groupId>
            <artifactId>javafaker</artifactId>
            <version>${com.github.javafaker}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-xml</artifactId>
            <version>${jackson.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>${build-helper-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <id>add-test-source</id>
                        <phase>generate-test-sources</phase>
                        <goals>
                            <goal>add-test-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>${basedir}/src/main/java/investigation/hub/test</source>
                            </sources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <argLine>
                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectjweaver.version}/aspectjweaver-${aspectjweaver.version}.jar"
                        --add-opens java.base/java.lang=ALL-UNNAMED
                        --add-opens java.base/java.lang=ALL-UNNAMED
                        --add-opens java.base/java.lang.reflect=ALL-UNNAMED
                        --add-opens java.base/java.io=ALL-UNNAMED
                        --add-exports jdk.unsupported/sun.misc=ALL-UNNAMED
                    </argLine>
                    <systemPropertyVariables>
                        <allure.results.directory>target/allure-results</allure.results.directory>
                        <allure.report.enable>${allure-report.enable}</allure.report.enable>
                        <allure.testng.hide.disabled.tests>${allure.hidden.test.disabled}</allure.testng.hide.disabled.tests>
                        <allure.link.issue.pattern>${allure.link.issue.pattern}</allure.link.issue.pattern>
                        <allure.link.tms.pattern>${allure.link.tms.pattern}</allure.link.tms.pattern>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
                <version>${allure-maven.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${maven-checkstyle-plugin.version}</version>
                <configuration>
                    <configLocation>${basedir}/src/main/resources/checkstyle/google_checks.xml</configLocation>
                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
                    <consoleOutput>true</consoleOutput>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>${checkstyle.com.puppycrawl.tools.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>org.apache.poi</groupId>
                        <artifactId>poi</artifactId>
                        <version>${org.apache.poi.version}</version>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <id>checkstyle</id>
                        <goals>
                            <goal>checkstyle</goal>
                        </goals>
                        <phase>prepare-package</phase>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>${maven-shade-plugin.version}</version> <!-- Use the latest version -->
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <shadedArtifactAttached>true</shadedArtifactAttached>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>investigation.hub.common.core.main.TestRunner</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <version>${maven-resources-plugin.version}</version>
                <executions>
                    <execution>
                        <id>copy-resources</id>
                        <!-- here the phase you need -->
                        <phase>clean</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>src/main/resources/javaagent</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>${settings.localRepository}/org/aspectj/aspectjweaver/${aspectjweaver.version}/</directory>
                                    <includes>
                                        <include>aspectjweaver-${aspectjweaver.version}.jar</include>
                                    </includes>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>